fixed congrats message overlaying arrow on mobile

--- a/scss/_congrats.scss
+++ b/scss/_congrats.scss
@@ -4,6 +4,7 @@
   left: 50%;
   margin-right: -50%;
   transform: translate(-50%, -50%) scale(0);
+  transform: scale(0);
   transform-origin: center;
   width: 300px;
   font-size: 2rem;
